--- a/dotateams/templates/show_teams.html
+++ b/dotateams/templates/show_teams.html
@@ -1,19 +1,11 @@
 {% extends "layout.html" %}
 {% block body %}
-  {% if session.logged_in %}
-    <form action="{{ url_for('add_entry') }}" method=post class=add-team>
-      <dl>
-        <dt>Title:
-        <dd><input type=text size=30 name=title>
-        <dt>Text:
-        <dd><textarea name=text rows=5 cols=40></textarea>
-        <dd><input type=submit value=Share>
-      </dl>
-    </form>
-  {% endif %}
+  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
   <ul class=teams>
   {% for team in teams %}
-    <li><h2>{{ team.title }}</h2>{{ team.description|safe }}
+    <li><h2>{{ team.title }}</h2>
+    <small>by: <a href="{{ url_for('profile', username=team.username) }}">{{ team.username }}</a></small>
+    <div>{{ team.description|safe }}</div>
   {% else %}
     <li><em>Unbelievable.  Nothing here so far</em>
   {% endfor %}
